--- a/resume.html
+++ b/resume.html
@@ -6,18 +6,13 @@
    <meta charset="UTF-8">
    <title>Alexander Carter | Resume</title>
    <style>
-      @page {
-         size: 8.5in 11in;
-         margin: 0.4in 0.15in;
-      }
-
       body { font-size:10pt; font-family:"Bitstream Charter", serif; }
 
-      @media screen {
+      @media screen, print {
          .page {
             height: auto;
-            margin: 2em auto;
-            width:  7.5in;
+            margin: 6em auto;
+            width:  8.5in;
          }
       }
 
@@ -142,11 +137,11 @@
    <section>
    <ul class="named_list">
       <li class="hanging"><span class="bullet_head">Fluent:</span>
-         <span class="nowrap">C++ (10 years),</span>
-         <span class="nowrap">GNU Bash (10 years),</span>
+         <span class="nowrap">C++ (11 years),</span>
+         <span class="nowrap">GNU Bash (11 years),</span>
          <span class="nowrap">Idris (5 years),</span>
+         <span class="nowrap">C (4 years),</span>
          <span class="nowrap">Haskell (4 years),</span>
-         <span class="nowrap">C (3 years),</span>
          <span class="nowrap">Java (3 years),</span>
          <span class="nowrap">Scheme (2 years)</span>
       </li>
@@ -156,38 +151,38 @@
    </ul>
    </section>
 
-   <!--           -->
-   <h2>Education</h2>
-   <!--           -->
-
-   <section>
-   <header>
-      <h3>Digipen Institute of Technology</h3>
-      <span class="date">2006 - 2010</span>
-   </header>
-   <p class="narration">
-      Bachelor of Science, Real-Time Interactive Simulation, Mathematics Minor
-   </p>
-   <ul>
-      <li>Four year-long team game projects completed from scratch (C++) including installers and
-         uninstallers <span class=nowrap>(Inno Setup)</span>
-      </li>
-      <li>Software rendering algorithms from scratch, DirectX, and OpenGL</li>
-      <li>Real-time 2D physics simulation</li>
-      <li>Win32 API, WinForms, GDI+, GTK, .NET 4.0</li>
-   </ul>
-   </section>
-
    <!--       -->
    <h2>Roles</h2>
    <!--       -->
 
    <section>
    <header>
-      <h3><a href="https://wyzant.com/tutors/alrunner4">Private Tutor</a></h3>
-      <span class="date">April 2020 - Present</span>
+      <h3>Systems Engineering @
+      <a href="https://www.nintendo.com/us/">Nintendo Technology Development</a></h3>
+      <span class=date>October 2021 - Present</span>
    </header>
-   <p class="narration">
+      <p class=narration>
+         My team is responsible for the implementation of the Nintendo Switch operating system's
+         BSD-compatible sockets API. Network software stability is a critical component enabling
+         Nintendo's multi-player and digital goods ecosystems.
+      </p>
+      <ul>
+         <li>stress testing a highly concurrent operating system process to uncover timing bugs</li>
+         <li>network protocol parsing and system implementation</li>
+         <li>interface state management APIs and callback system implementation</li>
+         <li>automated test analysis and correction</li>
+         <li>implementation of a low-impact packet filter for development tooling</li>
+         <li>addressing protocol management during device low-power state</li>
+         <li>significant exposure to FreeBSD network code in analysis and augmentation</li>
+      </ul>
+   </section>
+
+   <section>
+   <header>
+      <h3><a href="https://wyzant.com/tutors/alrunner4">Private Tutor</a></h3>
+      <span class=date>April 2020 - January 2024</span>
+   </header>
+   <p class=narration>
       My tutoring strategy is goal-oriented and starts by meeting any student at their current level
       of understanding. Through discussion and exercises, I've had hundreds of hours of successful
       lessons supporting students with:
@@ -203,9 +198,9 @@
    <section>
    <header>
       <h3>Adjunct Lecturer @ <a href="https://digipen.edu">DigiPen</a></h3>
-      <span class="date">May 2019 - December 2020</span>
+      <span class=date>May 2019 - December 2020</span>
    </header>
-   <p class="narration">
+   <p class=narration>
       As an adjunct, I managed all aspects of several semesters of the core computer
       science curriculum for freshmen and sophomores, and led summer elective courses in functional
       programming with curriculum of my own design.
@@ -222,9 +217,9 @@
    <section>
    <header>
       <h3>DevOps @ <a href="https://sigfig.com">SigFig</a></h3>
-      <span class="date">July 2014 - September 2018</span>
+      <span class=date>July 2014 - September 2018</span>
    </header>
-   <p class="narration">
+   <p class=narration>
       I was the #2 individual contributor for the infrastructure team during my tenure at SigFig,
       and trusted with full operational control over all production and data systems for a million
       monthly active users and thousands of clients with assets under management.
@@ -299,9 +294,9 @@
    <section>
    <header>
       <h3>Mobile Game Development @ <a href="https://www.jamcity.com/">TinyCo</a></h3>
-      <span class="date">August 2011 - October 2013</span>
+      <span class=date>August 2011 - October 2013</span>
    </header>
-   <p class="narration">
+   <p class=narration>
       My contributions to Tiny Pets and
       <a href="https://play.google.com/store/apps/details?id=com.tinyco.monsters">Tiny Monsters</a>
       earned me a vote of confidence from the studio's senior developers to participate in our
@@ -329,9 +324,9 @@
    <section>
    <header>
       <h3>Graphics Hardware Debug @ <a href="https://www.exploreintel.com/meet/folsom">Intel</a></h3>
-      <span class="date">August 2010 - July 2011</span>
+      <span class=date>August 2010 - July 2011</span>
    </header>
-   <p class="narration">
+   <p class=narration>
       I supported the Graphics Debug Team's efforts in reproducing and analyzing issues discovered
       by the Test Team and reported by customers, primarily through the SandyBridge platform's
       support for limited programmable on-die logic probes observable with the lab's logic
@@ -342,6 +337,27 @@
          the course of 9 months, I managed to prove the existence of a transistor voltage leak on 1%
          of SandyBridge parts that single-handedly created the E stepping.
       </li>
+   </ul>
+   </section>
+
+   <!--           -->
+   <h2>Education</h2>
+   <!--           -->
+
+   <section>
+   <header>
+      <h3>Digipen Institute of Technology</h3>
+      <span class=date>2006 - 2010</span>
+   </header>
+   <p class=narration>
+      Bachelor of Science, Real-Time Interactive Simulation, Mathematics Minor
+   </p>
+   <ul>
+      <li>Four year-long team game projects completed from scratch (C++)</span></li>
+      <li>Z80 emulator implementing full instruction set and display simulation</li>
+      <li>Software rendering algorithms from scratch, DirectX, and OpenGL</li>
+      <li>Real-time 2D physics simulation</li>
+      <li>Win32 API, WinForms, GDI+, GTK, .NET 4.0, InnoSetup</li>
    </ul>
    </section>
 
