--- a/resume.html
+++ b/resume.html
@@ -4,21 +4,21 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <title>Alexander Carter | Resume</title>
+   <title>Alexander L. Carter | Resume</title>
    <style>
       body { font-size:10pt; font-family:"Bitstream Charter", serif; }
 
       @media screen, print {
          .page {
             height: auto;
-            margin: 6em auto;
+            margin: 3em auto;
             width:  8.5in;
          }
       }
 
       h1 {
          font-size:   20pt;
-         margin:      6pt 10pt;
+         margin:      10pt;
          text-shadow: #303030 0 0 1pt;
       }
 
@@ -78,7 +78,7 @@
       .indent2 { margin-left:1.00in; }
       .named_list { list-style:none; }
       .nowrap { font-family:inherit; font-size:inherit; white-space:nowrap; }
-      .subtitle { margin-left: 20pt; }
+      .subtitle { display: table-cell; margin: 20pt; list-style-type=none; }
 
       .date {
          display:        table-cell;
@@ -91,15 +91,11 @@
       }
 
       .narration {
-         font-style:   italic;
-         font-family: "Operator Mono Book", serif;
          margin-left:  12pt;
       }
 
       .purpose {
-         font-family: "Operator Mono Book", serif;
          font-size:    11pt;
-         font-style:   italic;
          margin:       12pt;
       }
 
@@ -116,7 +112,10 @@
    <section>
    <header>
       <h1>Alexander L. Carter</h1>
-         <span class="subtitle">Generalist Software Developer</span>
+         <ul class=subtitle>
+            <li class="subtitle">Generalist Software Developer</li>
+            <li class="subtitle">Available for work in the greater Seattle area and remotely</li>
+         </ul>
       <ul class="contact">
          <li>916-275-3474</li>
          <li><a href="mailto:alrunner4@gmail.com">alrunner4@gmail.com</a></li>
@@ -130,11 +129,10 @@
    </p>
    </section>
 
+   <section>
    <!--           -->
    <h2>Languages</h2>
    <!--           -->
-
-   <section>
    <ul class="named_list">
       <li class="hanging"><span class="bullet_head">Fluent:</span>
          <span class="nowrap">C++ (11 years),</span>
@@ -146,8 +144,32 @@
          <span class="nowrap">Scheme (2 years)</span>
       </li>
       <li class="hanging"><span class="bullet_head">Very familiar with:</span>
-         Nix, JavaScript, HTML, CSS, Ruby, Lua, PureScript, GLSL, Objective-C, PHP, Puppet, C#
+         Nix, JavaScript, SQL, HTML, CSS, Ruby, Lua, PureScript, GLSL, Objective-C, PHP, Puppet, C#
       </li>
+   </ul>
+   </section>
+
+   <section>
+   <!--           -->
+   <h2>Education</h2>
+   <!--           -->
+   <header>
+      <h3>Digipen Institute of Technology</h3>
+      <span class=date>2006 - 2010</span>
+   </header>
+   <p class=narration>
+      Bachelor of Science, Real-Time Interactive Simulation, Mathematics Minor
+   </p>
+   <ul>
+      <li>
+         Four year-long team game projects completed using only low-level libraries; tech lead on
+         two of these teams (C++)
+      </li>
+      <li>Teacher's assistant and tutor for advanced C++ for two years</li>
+      <li>Z80 emulator implementing full instruction set and display simulation</li>
+      <li>Software rendering algorithms from scratch, DirectX, and OpenGL</li>
+      <li>Real-time 2D physics simulation and linear algebra</li>
+      <li>Win32 API, WinForms, GDI+, GTK, .NET 4.0, InnoSetup</li>
    </ul>
    </section>
 
@@ -158,11 +180,12 @@
    <section>
    <header>
       <h3>Systems Engineering @
-      <a href="https://www.nintendo.com/us/">Nintendo Technology Development</a></h3>
-      <span class=date>October 2021 - Present</span>
+         <a href="https://www.nintendo.com/us/">Nintendo Technology Development</a>
+      </h3>
+      <span class=date>October 2022 - June 2024</span>
    </header>
       <p class=narration>
-         My team is responsible for the implementation of the Nintendo Switch operating system's
+         My team was responsible for the implementation of the Nintendo Switch operating system's
          BSD-compatible sockets API. Network software stability is a critical component enabling
          Nintendo's multi-player and digital goods ecosystems.
       </p>
@@ -179,13 +202,13 @@
 
    <section>
    <header>
-      <h3><a href="https://wyzant.com/tutors/alrunner4">Private Tutor</a></h3>
+      <h3><a href="https://wyzant.com/tutors/alrunner4">Private Tutoring</a></h3>
       <span class=date>April 2020 - January 2024</span>
    </header>
    <p class=narration>
       My tutoring strategy is goal-oriented and starts by meeting any student at their current level
-      of understanding. Through discussion and exercises, I've had hundreds of hours of successful
-      lessons supporting students with:
+      of understanding. Through discussion and exercises, I've led more than a thousand hours of
+      successful lessons supporting students with:
    </p>
    <ul>
       <li>getting started with programming through games at the middle-school level</li>
@@ -211,6 +234,24 @@
       <li>CS 185: Introduction to C++ for Game Designers</li>
       <li>CS 225: Advanced C/C++</li>
       <li>CS 399: Introduction to Functional Programming (Idris/Haskell)</li>
+   </ul>
+   </section>
+
+   <section>
+   <header>
+      <h3>Technical Co-Founder @ <a href="https://protean.solutions">Protean Solutions</a></h3>
+      <span class=date>October 2018 - September 2022</span>
+   </header>
+   <p class="narration">
+      An unfunded venture, our team focused on a crowdsourced information-sharing quality-of-life
+      <a href="https://play.google.com/store/apps/details?id=solutions.protean.steelcobra">
+         mobile app for truck drivers</a>, and delivered on minor engagements with a freight carrier
+         for custom fleet analytics support software construction. As the only professional
+         developer on the team, 95% of Protean's engineering is my work.
+   </p>
+   <ul>
+      <li>Android native client with Google Maps and Google Sign-In integrations</li>
+      <li>Web frontend (HTML, CSS, JavaScript), Web backend (Apache CGI, GNU Bash, JSON, MySQL)</li>
    </ul>
    </section>
 
@@ -268,10 +309,9 @@
       </li>
       <li>Database administration (MySQL)
          <ul><li>
-            In addition to running point on all production changes, including database migrations, I
-            provisioned and managed backups and disaster recovery, and collaborated with service
-            developers about potential impacts of database changes ahead of production change
-            events.
+            In addition to running point on all production database migrations, I provisioned and
+            managed backups and disaster recovery, and collaborated with service developers about
+            potential impacts of database changes ahead of production change events.
          </li></ul>
       </li>
       <li>Corporate and datacenter VPN administration (PfSense)
@@ -288,6 +328,24 @@
             certification.
          </li></ul>
       </li>
+   </ul>
+   </section>
+
+   <section>
+   <header>
+      <h3>Prototype Development @ <a href="https://itgcapitalgroup.com/">ITG Holdings</a></h3>
+      <span class=date>February 2014</span>
+   </header>
+   <p class=narration>
+      A solo contract for technical design and implementation of a prototype web
+      client and server featuring real-time updates among many clients simultaneously. Multiple
+      other teams had been engaged and failed to deliver on this concept previously.
+   </p>
+   <ul>
+         <li>Haskell &amp; the Yesod Web Framework - JavaScript &amp; jQuery AJAX</li>
+         <li>4 week engagement concluded with a functional prototype delivered in 3 weeks leaving a
+            full week for user testing
+         </li>
    </ul>
    </section>
 
@@ -331,34 +389,11 @@
       by the Test Team and reported by customers, primarily through the SandyBridge platform's
       support for limited programmable on-die logic probes observable with the lab's logic
       analyzers.
-   </p>
-   <ul>
-      <li>After studying many sporadic reproductions of a particularly elusive hardware failure over
-         the course of 9 months, I managed to prove the existence of a transistor voltage leak on 1%
-         of SandyBridge parts that single-handedly created the E stepping.
-      </li>
-   </ul>
-   </section>
 
-   <!--           -->
-   <h2>Education</h2>
-   <!--           -->
-
-   <section>
-   <header>
-      <h3>Digipen Institute of Technology</h3>
-      <span class=date>2006 - 2010</span>
-   </header>
-   <p class=narration>
-      Bachelor of Science, Real-Time Interactive Simulation, Mathematics Minor
+      After studying many sporadic reproductions of a particularly elusive hardware failure over the
+      course of 9 months, I managed to prove the existence of a transistor voltage leak on 1% of
+      SandyBridge parts that single-handedly created the E stepping.
    </p>
-   <ul>
-      <li>Four year-long team game projects completed from scratch (C++)</span></li>
-      <li>Z80 emulator implementing full instruction set and display simulation</li>
-      <li>Software rendering algorithms from scratch, DirectX, and OpenGL</li>
-      <li>Real-time 2D physics simulation</li>
-      <li>Win32 API, WinForms, GDI+, GTK, .NET 4.0, InnoSetup</li>
-   </ul>
    </section>
 
 </div></body>
