--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
    <meta charset="UTF-8">
    <title>Alexander L. Carter | Resume</title>
    <style>
-      body { font-size:10pt; font-family:"Bitstream Charter", serif; }
+      body { font-size:10pt; font-family:serif; }
 
       @media screen, print {
          .page {
@@ -78,7 +78,7 @@
       .indent2 { margin-left:1.00in; }
       .named_list { list-style:none; }
       .nowrap { font-family:inherit; font-size:inherit; white-space:nowrap; }
-      .subtitle { display: table-cell; margin: 20pt; list-style-type=none; }
+      .subtitle { display: table-cell; margin: 20pt; list-style-type=none; vertical-align:middle; }
 
       .date {
          display:        table-cell;
@@ -95,7 +95,7 @@
       }
 
       .purpose {
-         font-size:    11pt;
+         font-size:    10pt;
          margin:       12pt;
       }
 
@@ -107,7 +107,7 @@
    </style>
 </head>
 
-<body class=page><div>
+<body class=page>
 
    <section>
    <header>
@@ -166,7 +166,7 @@
          two of these teams (C++)
       </li>
       <li>Teacher's assistant and tutor for advanced C++ for two years</li>
-      <li>Z80 emulator implementing full instruction set and display simulation</li>
+      <li>C# implementation of a Z80 simulator with full instruction set and display simulation</li>
       <li>Software rendering algorithms from scratch, DirectX, and OpenGL</li>
       <li>Real-time 2D physics simulation and linear algebra</li>
       <li>Win32 API, WinForms, GDI+, GTK, .NET 4.0, InnoSetup</li>
@@ -184,11 +184,11 @@
       </h3>
       <span class=date>October 2022 - June 2024</span>
    </header>
-      <p class=narration>
-         My team was responsible for the implementation of the Nintendo Switch operating system's
-         BSD-compatible sockets API. Network software stability is a critical component enabling
-         Nintendo's multi-player and digital goods ecosystems.
-      </p>
+   <p class=narration>
+      My team was responsible for the implementation of the Nintendo Switch operating system's
+      BSD-compatible sockets API. Network software stability is a critical component enabling
+      Nintendo's multi-player and digital goods ecosystems.
+   </p>
       <ul>
          <li>stress testing a highly concurrent operating system process to uncover timing bugs</li>
          <li>network protocol parsing and system implementation</li>
@@ -203,7 +203,7 @@
    <section>
    <header>
       <h3><a href="https://wyzant.com/tutors/alrunner4">Private Tutoring</a></h3>
-      <span class=date>April 2020 - January 2024</span>
+      <span class=date>April 2020 - Present</span>
    </header>
    <p class=narration>
       My tutoring strategy is goal-oriented and starts by meeting any student at their current level
@@ -396,6 +396,6 @@
    </p>
    </section>
 
-</div></body>
+</body>
 
 </html>
