remove defunct link to Play Store

--- a/resume.html
+++ b/resume.html
@@ -244,10 +244,9 @@
    </header>
    <p class="narration">
       An unfunded venture, our team focused on a crowdsourced information-sharing quality-of-life
-      <a href="https://play.google.com/store/apps/details?id=solutions.protean.steelcobra">
-         mobile app for truck drivers</a>, and delivered on minor engagements with a freight carrier
-         for custom fleet analytics support software construction. As the only professional
-         developer on the team, 95% of Protean's engineering is my work.
+      mobile app for truck drivers, and delivered on minor engagements with a freight carrier for
+      custom fleet analytics support software construction. As the only professional developer on
+      the team, 95% of Protean's engineering is my work.
    </p>
    <ul>
       <li>Android native client with Google Maps and Google Sign-In integrations</li>
