formatting and typos

--- a/resume.html
+++ b/resume.html
@@ -78,7 +78,9 @@
       .indent2 { margin-left:1.00in; }
       .named_list { list-style:none; }
       .nowrap { font-family:inherit; font-size:inherit; white-space:nowrap; }
-      .subtitle { display: table-cell; margin: 20pt; list-style-type=none; vertical-align:middle; }
+
+      ul.subtitle { display: table; border-spacing: 10pt; }
+      li.subtitle { display: table-cell; list-style-type: none; vertical-align: middle; }
 
       .date {
          display:        table-cell;
@@ -154,7 +156,7 @@
    <h2>Education</h2>
    <!--           -->
    <header>
-      <h3>Digipen Institute of Technology</h3>
+      <h3>DigiPen Institute of Technology</h3>
       <span class=date>2006 - 2010</span>
    </header>
    <p class=narration>
@@ -224,8 +226,8 @@
       <span class=date>May 2019 - December 2020</span>
    </header>
    <p class=narration>
-      As an adjunct, I managed all aspects of several semesters of the core computer
-      science curriculum for freshmen and sophomores, and led summer elective courses in functional
+      As an adjunct, I managed all aspects of several semesters of the core software development
+      curriculum for freshmen and sophomores, and led summer elective courses in functional
       programming with curriculum of my own design.
    </p>
    <ul>
